@@ -380,7 +380,6 @@ class ParameterParser{
         continue;
       }
 
-      bool isLongParam = false; 
       unsigned int choppedLeadingDash = 0;
       // user may input ---flag, ----flag, ..., and we will chop all leading -
       // user may also input ---, ----, but I don't understand what that means, so report error
